[gd_scene load_steps=3 format=3 uid="uid://bgrnnw3bmxul0"]

[ext_resource type="Script" uid="uid://woxq1gn2kx74" path="res://src/managers/unit_builder_manager/unit_builder_manager.gd" id="1_tngka"]
[ext_resource type="PackedScene" uid="uid://buu38s6g5564n" path="res://src/managers/unit_builder_manager/UnitSelectButton/UnitSelectButton.tscn" id="2_be6n3"]

[node name="UnitBuilderManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tngka")

[node name="UnitOptions" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UnitSelectButton" parent="UnitOptions" instance=ExtResource("2_be6n3")]
layout_mode = 2
text = "Tank"
